# GuiCode2

./: CMakeLists.txt  README.md
example/: example.cpp
include/GuiCode2/: BasicEvents.hpp  Button.hpp  Clipboard.hpp  Component.hpp  ContextMenu.hpp  Dimensions.hpp  Event.hpp  Font.hpp  Frame.hpp  Graphics.hpp  Key.hpp  Layout.hpp  Menu.hpp  Panel.hpp  Parser.hpp  Scrollbar.hpp  Shader.hpp  StateColors.hpp  TextArea.hpp  TextBox.hpp  TextComponent.hpp  TextContainer.hpp  TextDisplayer.hpp  Utils.hpp  Vec.hpp  Window.hpp  WindowBase.hpp  WindowsWindow.hpp  pch.hpp
include/GuiCode2/Components/: Button.hpp  Component.hpp  Menu.hpp  Panel.hpp  Scrollbar.hpp
include/GuiCode2/Events/: BasicEvents.hpp  Event.hpp  Key.hpp
include/GuiCode2/Graphics/: Font.hpp  Graphics.hpp  OpenGL.hpp  Shader.hpp
include/GuiCode2/Text/: TextArea.hpp  TextBox.hpp  TextComponent.hpp  TextContainer.hpp  TextDisplayer.hpp
include/GuiCode2/Utils/: Clipboard.hpp  Color.hpp  ContextMenu.hpp  Dimensions.hpp  Function.hpp  Pointer.hpp  StateColors.hpp  Utils.hpp
include/GuiCode2/Window/: Frame.hpp  Gui.hpp  Window.hpp  WindowBase.hpp  WindowsWindow.hpp
libs/glad/: glad.c  glad.h
source/: Main.cpp
source/GuiCode/: Component.cpp  Event.cpp  Graphics.cpp  Layout.cpp  Panel.cpp  Window.cpp  WindowsWindow.cpp
source/GuiCode2/: Button.cpp  Component.cpp  ContextMenu.cpp  Dimensions.cpp  Event.cpp  Frame.cpp  Graphics.cpp  Layout.cpp  Menu.cpp  Panel.cpp  Parser.cpp  Scrollbar.cpp  Shader.cpp  StateColors.cpp  TextArea.cpp  TextBox.cpp  TextComponent.cpp  TextContainer.cpp  TextDisplayer.cpp  Window.cpp  WindowsWindow.cpp
source/GuiCode2/Components/: Button.cpp  Component.cpp  Menu.cpp  Panel.cpp  Scrollbar.cpp
source/GuiCode2/Events/: Event.cpp
source/GuiCode2/Graphics/: Graphics.cpp  OpenGL.cpp  Shader.cpp
source/GuiCode2/Text/: TextArea.cpp  TextBox.cpp  TextComponent.cpp  TextContainer.cpp  TextDisplayer.cpp
source/GuiCode2/Utils/: ContextMenu.cpp  Dimensions.cpp  StateColors.cpp
source/GuiCode2/Window/: Frame.cpp  Gui.cpp  Window.cpp  (+1 more)
